# DVF-ROMs

./: Converter-ima-png  Flux.cpp  LDDMM.cpp  README.md  mha_file_reader.py
.dist/: LDDMM
DVF/2D flow/: Flux
DVF/B-spline/: B-spline  B-spline.cpp  CMakeLists.txt
DVF/LDDMM/: CMakeLists.txt  LDDMM3D.cpp
DVF/Optical_flow/: CMakeLists.txt  FLux3D.cpp
DVF/Variational/: Demons.cpp
LDDMM/: LDDMM2D.cpp  LDDMM3D.cpp
Optical_flow/: CMakeLists.txt  FLux3D.cpp
POD/: POD_main.py  POD_vis.py  compare_pod_vae.py
VAE/: DVF_recon.py  DVF_sample.py  DVF_visu.py  VAE_model.py
Visual tools/: diffeomorphism_display  inspect_mha.py
utils/: Splitter.py  mha_file_reader.py
